# ChaosTrainer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
chaostrainer/: __init__.py
chaostrainer/optim/: __init__.py  chaos.py  chaos_stream.py
examples/: mnist.py  mnist_stream.py  xor.py  xor_adamw.py  xor_stream.py
tests/: test_chaos.py  test_chaos_stream.py
