[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaostrainer"
description = "Gradient-free PyTorch optimizer based on Evolution Strategies with LARS-style trust-ratio updates."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Cahit Karahan", email = "cksoftwaresystems@gmail.com" }]
keywords = [
    "pytorch",
    "optimizer",
    "evolution-strategies",
    "gradient-free",
    "zeroth-order",
    "black-box-optimization",
    "lars",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/theomgdev/chaostrainer"
Source = "https://github.com/theomgdev/chaostrainer"
Issues = "https://github.com/theomgdev/chaostrainer/issues"

[tool.setuptools.packages.find]
include = ["chaostrainer*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
chaostrainer = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "chaostrainer._version.__version__" }

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
